# goit-pycore-hw-final

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-package.yml
cli/: __init__.py
cli/classic/: __init__.py  colors.py  dispatcher.py  handler.py  renderer.py  runner.py
cli/classic/forms/: __init__.py  base_form.py  contact_form.py  note_form.py
cli/tui/: __init__.py  base_frame.py
cli/tui/forms/: __init__.py  base_form.py  contact_form.py  note_form.py
cli/tui/views/: __init__.py  base_grid_view.py  (+4 more)
decorators/: __init__.py  log_action.py  log_command_action.py  log_decorator.py
docs/: classic.md  configuration.md  development.md  installation.md  tui.md
docs/screenshots/: README.md
enums/: __init__.py  scene_type.py  theme_type.py
factories/: __init__.py  scene_factory.py
helpers/: __init__.py  date_helpers.py
models/: __init__.py  app_config.py  app_data_paths.py  base_model.py  contact.py  contact_birthday.py  note.py  table_row.py
providers/: __init__.py  config_provider.py  storage_provider.py
scripts/: setup-hooks.ps1  setup-hooks.sh
services/: __init__.py  address_book_service.py  base_service.py  notes_service.py
tests/: test_config_provider.py  test_date_helpers.py  test_dispatcher.py  test_fake_data.py  test_models.py  test_renderer.py  test_services.py  test_state.py  test_storage_provider.py  test_table_row.py  test_validator.py
utils/: __init__.py  fake_data.py  state.py  validator.py  wrapped_func_formatter.py
